# MetaTrader5-stubs

./: LICENSE  README.md  pyproject.toml
MetaTrader5-stubs/: __init__.pyi
